# rag-md-folder-watcher

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GITHUB_UPLOAD.md  Makefile  NOTICE  README.md  RELEASE.md  RELEASE_NOTES_v1.0.1.md  SECURITY.md  TEST_REPORT.md  compose.rocky.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
app/: __init__.py  detector.py  healthcheck.py  logging_config.py  settings.py  state.py  watcher.py
docs/: architecture.md  security.md  troubleshooting.md
rag_md_converter/: __init__.py  config.py  pipeline.py  registry.py  result.py  security.py  utils.py
rag_md_converter/converters/: base.py  excel.py  html.py  image.py  legacy_office.py  ocr.py  pdf.py  powerpoint.py  textlike.py  word.py
scripts/: start-linux.sh  start-windows.ps1  test_local.sh
tests/: test_watcher.py
tests/fixtures/: sample.csv  sample.doc  sample.docx  sample.html  sample.json  sample.md  sample.ppt  sample.pptx  sample.txt  sample.xls  sample.xlsx  sample.xml
